・reactの実行方法を追加 ・preactでテーブルのクリック判定が発生しなかった不具合対応

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
+    "start": "react-scripts start",
     "start-dev": "npm run developent-env npx serve ./build_dev/",
     "start-prod": "npm run production-env npx serve ./build_prod/",
     "build-dev": "npx webpack --config webpack.development.js",
